--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "node-sass": "npm:dart-sass@^1.25.0",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "6.0.6",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
